--- a/.github/workflows/build-all-board.yml
+++ b/.github/workflows/build-all-board.yml
@@ -6,12 +6,15 @@ jobs:
       fail-fast: false
       # max-parallel: 4
       matrix:
-        board: [ stm32mp157a-sodimm2-mx, stm32mp157a-avenger96, stm32mp157a-dk1, stm32mp157a-ed1, stm32mp157a-ev1, stm32mp157c-dk2, stm32mp157c-ed1, stm32mp157c-ev1, stm32mp157d-dk1, stm32mp157d-ed1, stm32mp157f-dk2, stm32mp157f-ed1, stm32mp157f-ev1 ]
+        board: [ stm32mp157f-dk2 ]
 
     steps:
       - uses: actions/checkout@v2
         with:
           path: stm32mp1-ubuntu
+
+      - name: Update image
+        run: sudo apt-get update && sudo apt-get upgrade -y
           
       - name: Install depends
         run: sudo apt-get install -y zip lzop lzma gettext libmpc-dev u-boot-tools libncurses5-dev pv gzip flex bison ncurses-base build-essential device-tree-compiler
