Updated dependencies, removed snapd

--- a/.github/workflows/build-all-board.yml
+++ b/.github/workflows/build-all-board.yml
@@ -20,7 +20,7 @@ jobs:
         run: sudo apt-get install software-properties-common
 
       - name: Remove snapd
-        run: sudo apt-purge snapd
+        run: sudo apt-get purge snapd
           
       - name: Install depends
         run: sudo apt-get install -y zip lzop lzma gettext libmpc-dev u-boot-tools libncurses5-dev pv gzip flex bison ncurses-base build-essential device-tree-compiler
